# public_foxglove_urdf

a2_description/: package.xml
b2_description/: package.xml
b2_description/urdf/: b2.urdf
b2_description/xacro/: const.xacro  leg.xacro  robot.urdf.xacro
b2w_description/: package.xml
b2w_description/xacro/: robot.urdf.xacro
go2_description/: package.xml
go2_description/urdf/: go2.urdf
go2_description/xacro/: leg.xacro  robot.urdf.xacro
go2w_description/: package.xml
go2w_description/urdf/: go2w_description.urdf
go2w_description/xacro/: robot.urdf.xacro
m20_description/: package.xml
m20_description/urdf/: M20.urdf
spot_description/: package.xml
spot_description/urdf/: constants.urdf.xacro  spot.urdf.xacro  spot_leg.urdf.xacro
x30_description/: package.xml
x30_description/urdf/: X30.urdf
