<?xml version="1.0"?>
<package format="2">
  <name>b2w_description</name>
  <version>0.0.0</version>
  <description>The b2w_description package</description>

  <maintainer email="david@fieldai.com">David Fan</maintainer>
  <license>FieldAI Inc.</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
